--- a/app/styles/_map.scss
+++ b/app/styles/_map.scss
@@ -207,6 +207,12 @@
 	width: 36px;
 	height: 36px;
 	}
+
+	.leaflet-popup {
+		margin-left:5px;
+		margin-bottom: 12px;
+	}
+
 	.single-tweet.map-tweet {
 		margin: 0;
 		padding: 0;	
