--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -35,7 +35,7 @@
                     <div data="wall.statuses" id="map" maplayout style="margin-left:-48px; margin-top:-10px;" ng-style="wall.wallOptions.showStatistics?{}:{'margin-right':'-48px'}"></div>
                 </div>
             </div>
-            <div ng-show="wall.statuses.length>0" ng-if="wall.wallOptions.showStatistics" class="col-md-4">
+            <div ng-style="wall.statuses.length>0?{'opacity':'1'}:{'opacity':'0'}" ng-if="wall.wallOptions.showStatistics" class="col-md-4">
                 <h4>LEADERBOARD</h4>
                 <div class="row">
                     <img class="histogram-loader" ng-hide="wall.topTwitterersData" src="images/loading.gif">
