Enhance visibility button show data source

--- a/app/styles/_data-connect.scss
+++ b/app/styles/_data-connect.scss
@@ -197,6 +197,11 @@
 	z-index: -1;
 }
 
+.toggle-show-data {
+	font-size: 24px;
+	vertical-align: sub;
+	margin-left: 6px;
+}
 #source-info-form {
 	font-size: 16px;
 }
