--- a/app/views/data-connect/add-connection-modal.html
+++ b/app/views/data-connect/add-connection-modal.html
@@ -2,7 +2,7 @@
 	<div id="add-connection-modal-dialog" class="modal-dialog">
 
 		<!-- Modal content-->
-		<div class="modal-content">
+		<div class="modal-content" id="add-connection-modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
 				<h2 class="modal-title">Import Data Source</h2>
@@ -31,7 +31,9 @@
 
 					<div class="col-xs-10 tab-content">
 						<div class="tab-pane active" id="source-type-tab">
-							<h3>Choose data source format</h3>
+							<div class="box-header">
+								<h3 class="box-title">Choose Data Source format</h3>
+							</div>
 							<div class="row">
 								<div class="col-sm-10">
 									<div class="col-md-4 col-sm-4" ng-repeat="(key, sourceType) in sourceTypeListWEndpoint">
@@ -93,7 +95,7 @@
 						</div>
 						<div class="tab-pane" id="mapping-rule-tab">
 							<div class="box-header">
-								<h3 class="box-title">Final step : map your data to loklak</h3> <i ng-show="currentData" class="fa toggle-show-data" ng-class="showCurrentData ? 'fa-caret-down' : 'fa-caret-right'" ng-click="showCurrentData = !showCurrentData"></i>
+								<h3 class="box-title">Final step : map your data to loklak</h3> <i id="toggle-show-data" ng-show="currentData" class="fa" ng-class="showCurrentData ? 'fa-caret-down' : 'fa-caret-right'" ng-click="showCurrentData = !showCurrentData"></i>
 							</div>
 							<div class="box-body">
 								<div class="row" ng-show="showCurrentData">
