Set default harvesting frequency value to 6 hours
Pass harvesting_freq and lifetime value to push request
Convert lifetime to epoch field before sending request
Fix bug lifetime input field is not filled after selecting from datetimepicker UI

--- a/app/views/data-connect/add-connection-modal.html
+++ b/app/views/data-connect/add-connection-modal.html
@@ -85,7 +85,7 @@
 													</div>
 												</a>
 												<ul class="dropdown-menu" role="menu" aria-labelledby="datetimepicker1">
-												<datetimepicker ng-model="sourceInfoForm.lifetime" data-datetimepicker-config="{ dropdownSelector: '.my-toggle-select', minView: 'day' }"></datetimepicker>
+												<datetimepicker ng-model="inputs.lifetime" data-datetimepicker-config="{ dropdownSelector: '.my-toggle-select', minView: 'day' }"></datetimepicker>
 												</ul>
 											</div>
 										</div>
