Provide proper error message when source if offline.
Replace input type of source url from `text` to `url` to benefit from validation

--- a/app/styles/_data-connect.scss
+++ b/app/styles/_data-connect.scss
@@ -212,7 +212,7 @@
 	font-size: 16px;
 }
 
-#source-info-form input[type="text"] {
+#source-info-form input[type="text"], #source-info-form input[type="url"] {
 	width: 50%;
 }
 
