Display more user-friendly loklak field name
Perform a field name - label name mapping instead of display exact loklak field name

Other minor changes :
 - Fix bug lifetime is submitted as NaN when the field is empty
 - Clear old source data when a new url is submitted.
 - Re-validate after user changes source type

--- a/app/views/data-connect/add-connection-modal.html
+++ b/app/views/data-connect/add-connection-modal.html
@@ -108,7 +108,7 @@
 								<hr/>
 								<div class="row form-group" ng-class="$last ? 'last' : ''" ng-repeat="(key, value) in loklakFields">
 									<div class="col-md-2">
-										<span name="loklakField" class="loklak-field">{{value}}</span>
+										<span name="loklakField" class="loklak-field">{{value.label}}</span>
 									</div>
 									<div class="col-md-1" style="text-align: center">
 										<i class="fa fa-arrow-left"></i>
