--- a/app/views/data-connect/add-connection-modal.html
+++ b/app/views/data-connect/add-connection-modal.html
@@ -106,22 +106,29 @@
 									<div class="col-md-4 col-md-offset-1"><h3>Custom field</h3></div>
 								</div>
 								<hr/>
-								<div class="row form-group" ng-class="$last ? 'last' : ''" ng-repeat="(key, value) in loklakFields">
-									<div class="col-md-2">
-										<span name="loklakField" class="loklak-field">{{value.label}}</span>
-									</div>
-									<div class="col-md-1" style="text-align: center">
-										<i class="fa fa-arrow-left"></i>
-									</div>
-									<div class="col-md-4">
-										<input type="text" class="form-control input-sm custom-field" ng-model="inputs.mapRules[key][0]"/>
-									</div>
-									<div class="col-md-4 field-preview">
-										<pre>{{accessDataField(key) | json }}</pre>
-									</div>
+								<div class="form-group" ng-repeat="(key, value) in loklakFields">
+									<div class="row" ng-class="$last ? 'last' : ''" >
+										<div class="col-md-2">
+											<span name="loklakField" class="loklak-field">{{value.label}}</span>
+										</div>
+										<div class="col-md-1" style="text-align: center">
+											<i class="fa fa-arrow-left"></i>
+										</div>
+										<div class="col-md-4">
+											<input type="text" class="form-control input-sm custom-field" ng-model="inputs.mapRules[key][0]"/>
+										</div>
+										<div class="col-md-4 field-preview">
+											<pre>{{accessDataField(key) | json }}</pre>
+										</div>
 
-									<div class="col-md-1" ng-show="$last">
-										<i id="remove-map-rule" class="fa fa-minus-square-o fa-lg" ng-show="mapRulesNum >= 1" ng-click="removeMapRule()"></i>
+										<div class="col-md-1" ng-show="$last">
+											<i id="remove-map-rule" class="fa fa-minus-square-o fa-lg" ng-show="mapRulesNum >= 1" ng-click="removeMapRule()"></i>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-md-7">
+											<h4><small>{{value.help}}</small></h4>
+										</div>
 									</div>
 								</div>
 							</div>
