Synschronize design page dataConnect to match page Wall

--- a/app/styles/_data-connect.scss
+++ b/app/styles/_data-connect.scss
@@ -14,9 +14,13 @@
 	margin-right: 5px;
 }
 
-#my-connection-panel > h2 {
+#my-connection-panel > h1 {
 	display: inline-block;
 	vertical-align: sub;
+}
+
+#my-connection-panel #refreshButton {
+	margin-left: 8px;
 }
 
 /* overwrite admin.css */
