--- a/app/views/data-connect/data-connect.html
+++ b/app/views/data-connect/data-connect.html
@@ -6,9 +6,9 @@
 
 <div id="my-connection-panel">
 	<div class="buttonPanel pull-right">
-		<button class="btn btn-loklak-blue" data-toggle="modal" data-target="#add-connection-modal">Add Source</button>
+		<button class="btn btn-loklak-blue btn-lg" data-toggle="modal" data-target="#add-connection-modal">Add Source</button>
 	</div>
-	<h2>Active Data Sources</h2> <button id="refreshButton" class="btn btn-default" ng-click="onUpdateDataSources()" title="Refresh"><i class="fa fa-refresh"></i></button>
+	<h1>Active Data Sources</h1> <button id="refreshButton" class="btn btn-default" ng-click="onUpdateDataSources()" title="Refresh"><i class="fa fa-refresh"></i></button>
 	<div class="alert alert-success alert-dismissible" role="alert" ng-show="dataSourceMessages.success">
 		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		{{dataSourceMessages.success}}
