Add modal effect fade in from top

--- a/app/views/data-connect/add-connection-modal.html
+++ b/app/views/data-connect/add-connection-modal.html
@@ -1,4 +1,4 @@
-<div id="add-connection-modal" class="modal" role="dialog">
+<div id="add-connection-modal" class="modal fade" role="dialog">
 	<div id="add-connection-modal-dialog" class="modal-dialog">
 
 		<!-- Modal content-->
