--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -15,7 +15,9 @@
     <div ng-style="{'background-color': wall.wallOptions.headerColour}" ng-class="getHeaderClass()">
         <div ng-style="{'color': wall.wallOptions.headerForeColour} " class="hashtag col-md-4">{{wall.wallOptions.mainHashtag}}</div>
         <div ng-style="{'color': wall .wallOptions.headerForeColour} " class="event-name col-md-4">
-            <div><img ng-if="wall.wallOptions.logo" class="wall-preview-logo" data-ng-src="data:{{wall.wallOptions.logo.filetype}};base64,{{wall.wallOptions.logo.base64}}"><div ng-hide="!wall.wallOptions.showEventName" class="wall-header-eventname">{{wall.wallOptions.eventName}}</div></div>
+            <div><img ng-if="wall.wallOptions.logo" class="wall-preview-logo" data-ng-src="data:{{wall.wallOptions.logo.filetype}};base64,{{wall.wallOptions.logo.base64}}">
+                <div ng-hide="!wall.wallOptions.showEventName" class="wall-header-eventname">{{wall.wallOptions.eventName}}</div>
+            </div>
         </div>
         <div class="banner col-md-3"><a ng-hide="!wall.wallOptions.showLoklakLogo" ng-style="{'color': wall.wallOptions.headerForeColour} " href="/">Powered by Loklak.net</a></div>
         <div class="banner col-md-1">
@@ -27,8 +29,12 @@
         <div class="container content-container wall-body">
             <div ng-switch on="wall.wallOptions.layoutStyle" ng-show="wall.statuses.length>0" ng-class="wall.wallOptions.showStatistics?'col-md-8':'col-md-12'">
                 <div ng-switch-when="1" class="animate-repeat" ng-repeat="status in wall.statuses" linear open="wall.open" data="status"></div>
-                <div ng-switch-when="2">
-                    <div deckgrid class="deckgrid" source="wall.statuses" cardTemplate="wall/templates/card.html"></div>
+                <!-- <div ng-switch-when="2" class="animate-repeat" ng-repeat="status in wall.statuses" card open="wall.open" data="status"></div> -->
+                <div ng-switch-when="2" masonry>
+                    <!-- <div deckgrid class="deckgrid" source="wall.statuses" cardTemplate="wall/templates/card.html"></div> -->
+                    <div class="masonry-brick" ng-repeat="status in wall.statuses">
+                        <div card data="status"></div>
+                    </div>
                 </div>
                 <div ng-switch-when="3" class="animate-repeat" ng-repeat="status in wall.statuses" coa open="wall.open" data="status"></div>
                 <div ng-switch-when="4">
