--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -30,7 +30,7 @@
             <div ng-switch on="wall.wallOptions.layoutStyle" ng-show="wall.statuses.length>0" ng-class="wall.wallOptions.showStatistics?'col-md-8':'col-md-12'">
                 <div ng-switch-when="1" class="animate-repeat" ng-repeat="status in wall.statuses" linear open="wall.open" data="status"></div>
                 <!-- <div ng-switch-when="2" class="animate-repeat" ng-repeat="status in wall.statuses" card open="wall.open" data="status"></div> -->
-                <div ng-switch-when="2" masonry>
+                <div ng-switch-when="2" masonry preserve-order>
                     <!-- <div deckgrid class="deckgrid" source="wall.statuses" cardTemplate="wall/templates/card.html"></div> -->
                     <div class="masonry-brick" ng-repeat="status in wall.statuses">
                         <div card data="status"></div>
